Prints and thoughts on gizmo bugs

ED_gizmo_poll_or_unlink_delayed_from_tool_ex is broken for mult-window.

If both windows do not have the same active tool the VIEW3D_GGT_ruler
gets freed.

e.g., tref_rt->gizmo_group != VIEW3D_GGT_ruler (it is '\0' actually);

The special gizmo types (spin, ruler) are not added on :
WM_gizmomaptype_group_init_runtime_with_region

Note: Each workspace has its own current tool.

Related bugs: T63694, T64998