source/blender/windowmanager/intern/wm_toolsystem.c
@@ -73,6 +73,9 @@ struct bToolRef *WM_toolsystem_ref_from_context(struct bContext *C)
   WorkSpace *workspace = CTX_wm_workspace(C);
   ViewLayer *view_layer = CTX_data_view_layer(C);
   ScrArea *sa = CTX_wm_area(C);
+
+  printf("%s: workspace=%p, workspace->id.name=%s\n", __func__, workspace, workspace->id.name + 2);
+
   if (((1 << sa->spacetype) & WM_TOOLSYSTEM_SPACE_MASK) == 0) {
     return NULL;
   }
